# xBooster

./: .actrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  pre-commit-config.yaml  pyproject.toml  python-workspace.code-workspace  requirement.txt  requirements.txt  run-act.sh  run-ci-checks.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  compatibility.yml  local-test.yml  publish.yml  release.yml  typecheck.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: likelihood_boosting.md  shap_scorecards.md
examples/: README.md  base-score.ipynb  catboost-getting-started.ipynb  finetuning-getting-started.ipynb  lgb_constructor_example.py  lightgbm-getting-started.ipynb  run_training.py  shap-in-leaf-weights.ipynb  shap-scorecard-examples.ipynb  shap_scorecard_examples.ipynb  xbooster-getting-started.ipynb  xbooster-interpretability.ipynb  xbooster-scorecard-by-interval.ipynb  xbooster-tree-visualization.ipynb  xbooster-trees-to-indices.ipynb  xgboost-categorical-data.ipynb  xgboost-getting-started.ipynb  xgboost-interpretability.ipynb  xgboost-sql-deployment.ipynb  xgboost-tree-visualization.ipynb
examples/data/: X_test.parquet  credit_data.parquet
examples/models/: scorecard_constructor.pkl
notebooks/: xBooster-categorical.ipynb  xBooster-numerical.ipynb  xBooster-sql-query.ipynb
tests/: README.md  __init__.py  test_catboost_scorecard.py  test_catboost_wrapper.py  test_cb_constructor.py  test_constructor.py  test_explainer.py  test_extract_model_param_formats.py  test_finetune.py  test_finetuned_scorecard.py  test_interval_scorecard.py  test_lgb_constructor.py  test_parser.py  test_utils.py  test_xgb_constructor.py  test_xgb_regression.py  test_xgboost_compatibility.py
tmp/: catboost_scorecard.py  catboost_wrapper.py  original.py
typings/: README.md  py.typed
typings/catboost/: __init__.pyi
typings/lightgbm/: __init__.pyi
typings/scipy/: __init__.pyi  special.pyi  stats.pyi
typings/xgboost/: __init__.pyi
xbooster/: __init__.py  _parser.py  _utils.py  catboost_scorecard.py  catboost_wrapper.py  cb_constructor.py  constructor.py  explainer.py  finetuner.py  lgb_constructor.py  shap_scorecard.py  xgb_constructor.py
