[tool.poetry]
name = "xbooster"
version = "0.2.3"
description = "Explainable Boosted Scoring"
authors = ["xRiskLab <contact@xrisklab.ai>"]
license = "MIT"
readme = "README.md"
keywords = ["machine learning", "credit scoring", "xgboost", "explainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
black = {extras = ["jupyter"], version = "^24.2.0"}
duckdb = "^0.9.2"
ipykernel = "6.25.2"
matplotlib = "^3.8.0"
numpy = "^1.19.5"
pandas = "^2.2.2"
pylint = "^3.0.3"
scipy = "^1.11.4"
scikit-learn = "^1.3.0"
shap = "^0.44.0"
xgboost = "^2.0.0"
pytest = "^8.0.0"
pre-commit = "^3.6.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pytest = "^8.0.0"
black = "^24.2.0"

[tool.black]
line-length = 60

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

