[project]
name = "xbooster"
version = "0.2.6.post1"
description = "Explainable Boosted Scoring"
authors = [
    {name = "xRiskLab", email = "contact@xrisklab.ai"}
]
readme = "README.md"
keywords = ["machine learning", "credit scoring", "xgboost", "catboost", "explainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "matplotlib>=3.8.0,<4.0.0",
    "numpy>=1.19.5,<2.0.0",
    "pandas>=2.2.2,<3.0.0",
    "scipy>=1.11.4,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "shap>=0.44.0,<1.0.0",
    "catboost>=1.2.7,<2.0.0",
    "xgboost>=2.0.0,<4.0.0",
    "pyarrow>=19.0.1,<20.0.0",
]
[project.urls]
Repository = "https://github.com/xRiskLab/xBooster"
Homepage = "https://github.com/xRiskLab/xBooster"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pylint>=3.2.6,<4.0.0",
    "pytest>=8.3.2,<9.0.0",
    "pre-commit>=4.0.1,<5.0.0",
    "faker>=37.0.2",
    "ruff>=0.11.2",
    "nbconvert>=7.16.6",
    "pandas-stubs>=2.2.3",
    "prek>=0.2.0",
]

[tool.setuptools.packages.find]
exclude = ["tmp*", "catboost_info*"]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 60

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

[tool.pytest.ini_options]
pythonpath = ["xbooster"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0413", "C0103", "E0213"]

[tool.pylint.basic]
# Allow single letter variable names (common in ML: X, y)
good-names = ["i", "j", "k", "ex", "Run", "_", "X", "y"]
# Add the virtual environment to Python path
init-hook = "import sys, os; sys.path.insert(0, os.path.join(os.getcwd(), '.venv', 'lib', 'python3.10', 'site-packages'))"

[tool.pylint.format]
max-line-length = 88

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

